--- a/css/main.css
+++ b/css/main.css
@@ -477,7 +477,7 @@ header .bi-chevron-down {
     height: 82px;
   }
   .aboutus-hero {
-    background-image: url("/img/computer_1280.png");
+    background-image: url("../img/computer_1280.png");
   }
   .experiences .experience-info {
     font-size: 18px;
